# Imoogle-browser

./: .mailmap  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.devcontainer/fedora-ci/: devcontainer.json
.devcontainer/optimized/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci-flatpak.yml  ci-windows.yml  ci.yml  dev-container.yml  flatpak-template.yml  js-and-wasm-artifacts.yml  js-and-wasm-benchmarks.yml  lagom-template.yml  libjs-test262.yml  lint-code.yml  lint-commits.yml  merge-conflict-labeler.yml  nightly-android.yml  nightly-lagom.yml  notes-push.yml  stale.yml
AK/: Assertions.cpp  Assertions.h  Atomic.h  AtomicRefCounted.h  Badge.h  Base64.cpp  Base64.h  BinarySearch.h  Bitmap.h  BitmapView.h  ByteBuffer.h  ByteString.cpp  ByteString.h  ByteStringImpl.cpp  ByteStringImpl.h  CMakeLists.txt  Checked.h  CircularQueue.h  CopyOnWrite.h  Demangle.h  DistinctNumeric.h  DoublyLinkedList.h  Error.h  FixedArray.h  FloatingPoint.h  Forward.h  Function.h  HashFunctions.h  HashMap.h  HashTable.h  Hex.cpp  Hex.h  IDAllocator.h  IPv4Address.h  IntrusiveList.h  IterationDecision.h  Iterator.h  JsonArray.cpp  JsonArray.h  JsonObject.cpp  (+62 more)
Documentation/: AddNewIDLFile.md  AdvancedBuildInstructions.md  BrowsingContextsAndNavigables.md  BuildInstructionsImoogleBrowser.md  BuildProfilingInstructions.md  CSSProperties.md  CodingStyle.md  DevTools.md  FAQ.md  GettingStartedContributing.md  LibWebFromLoadingToPainting.md  Patterns.md  Porting.md  ProcessArchitecture.md  README.md  SmartPointers.md  StringFormatting.md  Testing.md  Troubleshooting.md
Documentation/EditorConfiguration/: AndroidStudioConfiguration.md  CLionConfiguration.md  EmacsConfiguration.md  HelixConfiguration.md  NvimConfiguration.md  QtCreatorConfiguration.md  VSCodeConfiguration.md  VimConfiguration.md
Documentation/HumanInterfaceGuidelines/: Text.md
Libraries/LibCompress/: CMakeLists.txt  Forward.h  Lzw.h
Libraries/LibCore/: AnonymousBuffer.cpp  AnonymousBuffer.h  AnonymousBufferWindows.cpp  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  DirIterator.cpp  DirIterator.h  ElapsedTimer.cpp  ElapsedTimer.h  Environment.cpp  Event.h  EventLoop.cpp  EventLoop.h  EventLoopExecutor.swift  EventLoopImplementation.cpp  EventLoopImplementation.h  EventLoopImplementationUnix.cpp  EventReceiver.cpp  File.cpp  (+35 more)
Meta/: WPT.sh  check-debug-flags.sh  configure-clangd.sh  find_compiler.py  host_platform.py  imooglebrowser.py  refresh-imooglebrowser-qtcreator.sh  shell_include.sh  utils.py  wpt-bisect-helper.sh
Meta/gn/secondary/ImoogleBrowser/: BUILD.gn  enable_appkit.gni  enable_qt.gni
Meta/gn/secondary/ImoogleBrowser/ImageDecoder/: BUILD.gn
Meta/gn/secondary/ImoogleBrowser/RequestServer/: BUILD.gn
Meta/gn/secondary/ImoogleBrowser/WebContent/: BUILD.gn
Meta/gn/secondary/ImoogleBrowser/WebDriver/: BUILD.gn
Meta/gn/secondary/ImoogleBrowser/WebWorker/: BUILD.gn
Services/WebContent/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  ConsoleGlobalEnvironmentExtensions.cpp  ConsoleGlobalEnvironmentExtensions.h  DevToolsConsoleClient.cpp  DevToolsConsoleClient.h  Forward.h  PageClient.cpp  PageClient.h  PageHost.cpp  PageHost.h  WebDriverConnection.cpp  WebDriverConnection.h  WebUIConnection.cpp  WebUIConnection.h  main.cpp
Tests/LibWeb/test-web/: Application.cpp  Application.h  CMakeLists.txt  Fixture.cpp  Fixture.h  Fuzzy.cpp  Fuzzy.h  TestWeb.h  TestWebView.cpp  TestWebView.h  main.cpp
Toolchain/: BuildVcpkg.py
UI/: CMakeLists.txt  Info.plist
UI/Android/: BuildLagomTools.sh  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
UI/Android/src/androidTest/java/org/serenityos/imooglebrowser/: SmokeTest.kt
UI/Android/src/main/: AndroidManifest.xml
UI/Android/src/main/cpp/: ALooperEventLoopImplementation.cpp  ALooperEventLoopImplementation.h  ImageDecoderService.cpp  ImoogleBrowserActivity.cpp  ImoogleBrowserServiceBaseJNI.cpp  JNIHelpers.cpp  JNIHelpers.h  RequestServerService.cpp  TimerExecutorService.cpp  WebContentService.cpp  WebContentServiceJNI.cpp  WebViewImplementationNative.cpp  WebViewImplementationNative.h  WebViewImplementationNativeJNI.cpp
UI/Android/src/main/java/org/serenityos/imooglebrowser/: ImageDecoderService.kt  ImoogleBrowserActivity.kt  ImoogleBrowserServiceBase.kt  ImoogleBrowserServiceConnection.kt  RequestServerService.kt  TimerExecutorService.kt  TransferAssets.java  WebContentService.kt  WebView.kt  WebViewImplementation.kt
UI/Android/src/main/res/layout/: activity_main.xml
UI/Android/src/main/res/values/: strings.xml  themes.xml
UI/Android/src/main/res/values-night/: themes.xml
UI/AppKit/: CMakeLists.txt  main.mm  module.modulemap
UI/AppKit/Application/: Application.h  Application.mm  ApplicationDelegate.h  ApplicationDelegate.mm
UI/AppKit/Interface/: Autocomplete.h  Autocomplete.mm  Event.h  Event.mm  ImoogleBrowserWebView.h  ImoogleBrowserWebView.mm  ImoogleBrowserWebViewBridge.cpp  ImoogleBrowserWebViewBridge.h  ImoogleBrowserWebViewWindow.h  ImoogleBrowserWebViewWindow.mm  InfoBar.h  InfoBar.mm  Menu.h  Menu.mm  Palette.h  Palette.mm  SearchPanel.mm  Tab.h  Tab.mm  TabController.mm
UI/AppKit/Utilities/: Conversions.h  Conversions.mm
UI/Qt/: Application.cpp  Application.h  AudioCodecPluginQt.cpp  AudioCodecPluginQt.h  AudioThread.cpp  AudioThread.h  Autocomplete.cpp  Autocomplete.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  FindInPageWidget.cpp  FindInPageWidget.h  Icon.cpp  Icon.h  LocationEdit.cpp  LocationEdit.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h  StringUtils.cpp  StringUtils.h  TVGIconEngine.cpp  TVGIconEngine.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  WebContentView.cpp  WebContentView.h  imooglebrowser.qrc  main.cpp
UI/cmake/: AndroidExtras.cmake  EnableLagom.cmake  ImoogleBrowserInstallConfig.cmake  InstallRules.cmake  ResourceFiles.cmake
Utilities/: CMakeLists.txt  abench.cpp  dns.cpp  image.cpp  js.cpp  wasm.cpp  xml.cpp
(+2029 files in other folders)
